--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,5 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Release
-        uses: justincy/github-action-npm-release@v1.2.0
-        id: release
+      - name: Automatic GitHub Release
+        uses: justincy/github-action-npm-release@2.0.2
