--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,23 @@ jobs:
     needs: [FetchMap]
     
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
+      - name: Get previous tag
+        id: previoustag
+        uses: "WyriHaximus/github-action-get-previous-tag@1.0.0"
+      - name: Get next minor version
+        id: semvers
+        uses: "WyriHaximus/github-action-next-semvers@v1.0"
         with:
-          fetch-depth: 0
-      - name: Automatic GitHub Release
-        uses: justincy/github-action-npm-release@2.0.2
+          version: ${{ steps.previoustag.outputs.tag }}
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: ${{ steps.semvers.outputs.patch }}
+          release_name: ${{ steps.semvers.outputs.patch }}
+          draft: false
+          prerelease: false
