--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,13 @@
 name: Autorelease
+
 on:
   schedule:
     - cron: "30 0 * * *"
+
   workflow_dispatch:
     inputs:
       git-ref:
-        description: Force release  
+        description: Force release
         required: false
 
 jobs:
@@ -13,31 +15,32 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       prev_hash: ${{ steps.prev_hash.outputs.hash }}
+
     steps:
       - uses: actions/checkout@v2
         with:
           ref: ${{github.head_ref}}
-      
+
       - id: prev_hash
         shell: sh
         run: |
           echo "::set-output name=hash::$(git log -1 --format=%h)"
-      
+
       - run: "./oui_update.sh"
-      
+
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Daily autoupdate
-  
+
   Release:
     runs-on: ubuntu-latest
     needs: [FetchMap]
-    
+
     steps:
       - uses: actions/checkout@v2.2.0
         with:
           fetch-depth: 0
-      
+
       - id:  new_hash
         shell: sh
         run: |
@@ -46,19 +49,19 @@ jobs:
       - name: Get Previous tag
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@master"
-        
+
       - name: Get next version
         id: semvers
         uses: "WyriHaximus/github-action-next-semvers@v1.0"
         with:
           version: ${{ steps.previoustag.outputs.tag }}
-          
+
       - name: Create Release
         if: needs.FetchMap.outputs.prev_hash != steps.new_hash.outputs.hash
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ steps.semvers.outputs.patch }}
           release_name: v${{ steps.semvers.outputs.patch }}
