--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,16 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       prev_hash: ${{ steps.prev_hash.outputs.prhash }}
-      new_hash: ${{ steps.new_hash.outputs.pohash }}
+      post_hash: ${{ steps.post_hash.outputs.pohash }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.3
+        with:
+          fetch-depth: 0
 
       - id: prev_hash
         run: |
-          echo "::set-output name=pohash::$(git log -1 --format=%h)"
+          echo "::set-output name=prhash::$(git log -1 --format=%h)"
 
       - run: "./oui_update.sh"
 
@@ -30,21 +32,23 @@ jobs:
         with:
           commit_message: Daily autoupdate
 
-      - id: new_hash
+      - id: post_hash
         run: |
-          echo "::set-output name=prhash::$(git log -1 --format=%h)"
+          echo "::set-output name=pohash::$(git log -1 --format=%h)"
 
   Release:
     runs-on: ubuntu-latest
     needs: [FetchMap]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.3
+        with:
+          fetch-depth: 0
 
       - id: dbg
         env:
           PREV_HASH: ${{ needs.FetchMap.outputs.prev_hash }}
-          POST_HASH: ${{ needs.FetchMap.outputs.new_hash }}
+          POST_HASH: ${{ needs.FetchMap.outputs.post_hash }}
         run: |
           echo "$PREV_HASH -> $POST_HASH"
 
