--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,8 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Daily autoupdate
+          commit_user_name: Vendormap Updater 
+          commit_author: Vendormap Updater <actions@github.com>  
 
       - id: post_hash
         run: |
